RESOLVED FIXED19841
SVGLinearGradientElement: fy property doesn't react to dynamic updates
https://bugs.webkit.org/show_bug.cgi?id=19841
Summary SVGLinearGradientElement: fy property doesn't react to dynamic updates
Nikolas Zimmermann
Reported 2008-07-01 05:13:28 PDT
Fix problem, and cover SVGLinearGradientElement with svg/dynamic-updates/ tests.
Attachments
Initial patch (63.81 KB, patch)
2008-07-01 05:14 PDT, Nikolas Zimmermann
koivisto: review+
Nikolas Zimmermann
Comment 1 2008-07-01 05:14:00 PDT
Created attachment 22025 [details] Initial patch
Nikolas Zimmermann
Comment 2 2008-07-01 05:22:07 PDT
Landed in r34916.
Note You need to log in before you can comment on or make changes to this bug.