Reviewed by Antti.

Fixes: https://bugs.webkit.org/show_bug.cgi?id=19841
Fix two small problems in the gradient & pattern code.

Added 12 new layout tests: svg/dynamic-updates/SVGLinearGradientElement*.html


Canonical link: https://commits.webkit.org/27359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34916 268f45cc-cd09-0410-ab3c-d52691b4dbfc